# mcp-handler

./: .gitignore  README.md  config.example.yaml  mcp_hub.yaml  post_install.py  pyproject.toml
.github/: FUNDING.yml
src/: __init__.py  aliases.py  autorun.py  config.py  connector.py  db.py  funding.py  health.py  hotreload.py  mcp_hub_cli.py  namespacing.py  quiet.py  registry.py  replay.py  router.py  server.py  session.py
src/mcp_hub.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_core.py  test_integration.py
